두번째 파일 업로드

--- a/html/trend.html
+++ b/html/trend.html
@@ -10,14 +10,50 @@
         h2 {
             font-size: 30px;
         }
-     </style>
+
+        table, th, td {
+          border: 2px solid black;
+          border-collapse: collapse;
+        }
+
+        th {
+            font-size: 25px;
+            font-weight: bold;
+        }
+
+        p {
+            font-size: 20px;
+            font-weight: normal;
+        }
+
+        </style>
 
 </head>
 <body>
     <h2>반도체 최근 동향 소개</h2>
     
-    <iframe width="420" height="345" src="https://youtu.be/sMlk1nQyEzk">
-    </iframe>
+    <table style="width:100%">
+    <tr>
+        <td><iframe width="560" height="315" src="https://www.youtube.com/embed/sMlk1nQyEzk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></th>
+        <th>삼성전자, 업계 최초 고용량 512GB CXL D램 개발<br>
+        <p>삼성전자가 이번에 고용량 CXL D램을 개발함에 따라 메인 D램과 더불어 서버 한 대당 메모리 용량을 수십 테라바이트 이상으로 확장할 수 있게 됐습니다.</p></td>
+      </tr>
+
+    
+<tr>
+   <td><a href="https://www.samsungsemiconstory.com/kr/%ec%82%bc%ec%84%b1%ec%a0%84%ec%9e%90-%ec%97%85%ea%b3%84-%ec%b5%9c%ec%b4%88-ufs-4-0-%eb%a9%94%eb%aa%a8%eb%a6%ac-%ea%b0%9c%eb%b0%9c/">
+        <img src="../image/semi.jpg" alt="semi" style="width:400px;height:250px;">
+        </a></td>
+        <th>삼성전자, 업계 최초 UFS 4.0 메모리 개발<br>
+        <p>UFS 4.0은 고해상도 컨텐츠와 대용량 모바일 게임 등 처리할 데이터가 늘어나는 최신 스마트폰 등 모바일 기기를 비롯해 향후 차량용(Automotive) 반도체, 메타버스(Metaverse) 등을 포함한 기기들에 광범위하게 확산될 것으로 예상됩니다.</p></th>
+    </tr>
+
+    <tr>
+        <td><iframe width="560" height="315" src="https://www.youtube.com/embed/XosSMmXhKiQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <th>삼성전자, ‘생체인증카드’용 원칩 지문인증IC 출시<br>
+        <p>하드웨어 보안칩, 지문 센서, 보안 프로세서 기능을 하나의 IC로 통합, 국제 보안 인증 획득 및 테스트 통과로 보안성 입증</p></th>
+    </tr>
+</table>
 
 </body>
 </html>
